force-app/main/default/objects/Property__c/fields/Rooms__c.field-meta.xml
<CustomField>
    <fullName>Rooms__c</fullName>
    <label>Rooms</label>
    <length>4</length>
    <type>Text</type>
</CustomField>