force-app/main/default/objects/Property__c/fields/Similarity_Key__c.field-meta.xml
<CustomField>
    <fullName>Similarity_Key__c</fullName>
    <description>This is an internal key used for address matching</description>
    <inlineHelpText>This is an internal key used for address matching</inlineHelpText>
    <label>Similarity Key</label>
    <length>255</length>
    <type>Text</type>
</CustomField>