force-app/main/default/objects/Property__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>City__c</columns>
    <columns>County__c</columns>
    <columns>State__c</columns>
    <columns>Street__c</columns>
    <columns>Zip_Code__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>